# ENGI9875

./: CMakeLists.txt  Lab Report Guide.md  README.md  c_tips.md  main.c
A1/: A1_problem.md  CMakeLists.txt  aircraft.c  aircraft.h  airport.c  airport.h  flight.c  flight.h
A2/: A2_problem.md  CMakeLists.txt  Performance_Analysis.md  rtos-alloc.c  rtos-alloc.h  test.cpp  time_plot.xlsx
A3/: A3_problem.md  CMakeLists.txt  Makefile  logic.md  myspin.c  shell.c  sio.c  sio.h  tsh.c
A3/Report/: report.md
A4/: A4_problem.md  Makefile  assign4  assign4.py  belady.txt  clock.txt  clock2.txt  opt.txt
A5/: A5_problem.md  Doc.md  Makefile  assign4.c  assign4.h  example.c  fuse.c
A5/bbfs/: bbfs.c
A5/fat_fuse/: Makefile  README.md  fat16.h  fat16_fuse.c  fat16_fuse.h
ProxyLab/: README.md  cache.c  cache.h  proxy.c
ProxyLab/tiny/: tiny.c
lab/: lab1.md  lab1_pre.md
lab/src/: file.c  main.c  stuff.s
lab1/: lab1.md
lab1/src/: Makefile  stuff_64.s
lab2/: .libdispatch.bat.swp  .libdispatch.c.swp  .nfs00000000025801e200000102  .nfs000000000258024c000000fd  .nfs000000000258027a00000112  .nfs000000000258158000000100  CMakeLists.txt  Makefile  lab.sh  lab2_report.md  libdispatch.c  plot.R  pthreads.c  serial  serial.c  thread.c
lab2/report_doc/: data.xlsx  lab2_report.md
lab3/: CMakeLists.txt  data.xlsx  lab3_report.md  main.c  rusage.c  setup-build.sh
lab4/: lab4-report.md  lab4_extra_credit.md
tiny/: csapp.c  tiny.c  wrappers.c
